--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,22 +1,83 @@
-@media screen and (max-width: 700px){
-     header .menu{
-          flex-direction: column;
+@media screen and (max-width:700px){
+     [class*='col-']{/*a todas esas col *=,, emtre el minimo y el maximo toma las col y dejalas a l 100% para que al achicarse*/ 
+          
+          width:100%;
+
      }
-     header .menu .logo{
+     .container header .menu{
+          flex-direction: column;
+          padding: 1.5em;
+          
+     }
+     .container header .menu .logo{
           display: flex;
           flex-direction: row;
           justify-content: space-between;
           width: 100%;
-          padding: 1em
+          padding: 1em;
+         
      }
-     header .menu .logo .btn-menu{
+     .container  header .menu .logo .btn-menu{
           display: inline-block;
+         color: gray;
      }
-     header .menu .enlaces{
+     .container header .menu .enlaces{
           width: 100%;
           display: flex;
           flex-direction:  row;
           flex-wrap: wrap;
           justify-content: space-around;
+          color: gray;
      }
-}
+     .col-2{
+        width: 33%;
+     }
+      .yellow img{
+         width: 100%;
+         height:40%;
+     }
+      .video{
+         
+     }
+     .col-3{
+          width: 50%;
+     }
+     /*Estilos extr*/
+     .firsImg{
+           background:  linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/banner.jpg') no-repeat;
+          background-size: cover;
+          background-position: 50%;
+          height: 100vh;
+     }
+     .firsImg{
+          padding: 0;
+     }
+     .onePlace{
+         padding: 1em;
+         padding-top: 20%;
+         padding-bottom: 0;
+     }
+     .onePlace .col-6{
+          width: 50%;
+     }
+     .moviePic{
+          margin:0;
+          padding: 0;
+     }
+      .moviePic img{
+         width: 90%;
+         height: 50%;
+     }
+
+     
+     .buyTxt h4{
+          color: #CFCAC7;
+     }
+     .footer{
+          background-color: #F3F3F3;
+          color: #CFCAC7;
+          padding: 1em;
+     }
+
+
+ }
